simple injector added

--- a/Web/Common/Common.csproj
+++ b/Web/Common/Common.csproj
@@ -32,12 +32,17 @@
         <WarningLevel>4</WarningLevel>
     </PropertyGroup>
     <ItemGroup>
+        <Reference Include="SimpleInjector, Version=4.6.0.0, Culture=neutral, PublicKeyToken=984cb50dea722e99">
+          <HintPath>..\packages\SimpleInjector.4.6.0\lib\net45\SimpleInjector.dll</HintPath>
+          <Private>True</Private>
+        </Reference>
         <Reference Include="System" />
         <Reference Include="System.Core" />
         <Reference Include="System.Data" />
         <Reference Include="System.Xml" />
     </ItemGroup>
     <ItemGroup>
+        <Compile Include="CommonLibrary.cs" />
         <Compile Include="Database\DataAccess\Implementation\UserDataAccess.cs" />
         <Compile Include="Database\DataAccess\IUserDataAccess.cs" />
         <Compile Include="Database\Dto\User.cs" />
@@ -46,6 +51,9 @@
     <ItemGroup>
       <Folder Include="Models" />
       <Folder Include="Services" />
+    </ItemGroup>
+    <ItemGroup>
+      <None Include="packages.config" />
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
     <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
