--- a/Web/WebApiApplication/packages.config
+++ b/Web/WebApiApplication/packages.config
@@ -6,7 +6,11 @@
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.7" targetFramework="net48" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net48" />
+  <package id="SimpleInjector" version="4.6.0" targetFramework="net48" />
+  <package id="SimpleInjector.Integration.WebApi" version="4.6.0" targetFramework="net48" />
+  <package id="SimpleInjector.Integration.WebApi.WebHost.QuickStart" version="4.6.0" targetFramework="net48" />
   <package id="Swashbuckle" version="5.6.0" targetFramework="net48" />
   <package id="Swashbuckle.Core" version="5.6.0" targetFramework="net48" />
+  <package id="WebActivator" version="1.4.4" targetFramework="net48" />
   <package id="WebActivatorEx" version="2.0" targetFramework="net48" />
 </packages>
