--- a/Web/WebApiApplication/WebApiApplication.csproj
+++ b/Web/WebApiApplication/WebApiApplication.csproj
@@ -49,13 +49,19 @@
         <Compile Include="App_Start\SwaggerConfig.cs" />
         <Compile Include="Configure\WebApiConfig.cs" />
         <Compile Include="Controllers\HomeController.cs" />
+        <Compile Include="Controllers\PatientsController.cs" />
         <Compile Include="Global.asax.cs">
             <DependentUpon>Global.asax</DependentUpon>
         </Compile>
         <Compile Include="Models\HelloWorldResponse.cs" />
+        <Compile Include="Models\Patients\SearchPatientsItem.cs" />
+        <Compile Include="Models\Patients\SearchPatientsRequest.cs" />
+        <Compile Include="Models\Patients\SearchPatientsResponse.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
         <Compile Include="Services\IHomeControllerService.cs" />
         <Compile Include="Services\Implementation\HomeControllerService.cs" />
+        <Compile Include="Services\Patients\Implementation\PatientsControllerService.cs" />
+        <Compile Include="Services\Patients\IPatientsControllerService.cs" />
     </ItemGroup>
     <ItemGroup>
         <Content Include="Global.asax" />
