--- a/Web/WebApiApplication/WebApiApplication.csproj
+++ b/Web/WebApiApplication/WebApiApplication.csproj
@@ -34,6 +34,7 @@
         <DefineConstants>DEBUG;TRACE</DefineConstants>
         <ErrorReport>prompt</ErrorReport>
         <WarningLevel>4</WarningLevel>
+        <DocumentationFile>bin\WebApiApplication.xml</DocumentationFile>
     </PropertyGroup>
     <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
         <DebugSymbols>true</DebugSymbols>
@@ -111,6 +112,7 @@
         <HintPath>..\packages\Microsoft.AspNet.WebApi.WebHost.5.2.7\lib\net45\System.Web.Http.WebHost.dll</HintPath>
         <Private>True</Private>
       </Reference>
+      <Reference Include="System.Xml" />
       <Reference Include="WebActivator, Version=1.4.4.0, Culture=neutral, PublicKeyToken=null">
         <HintPath>..\packages\WebActivator.1.4.4\lib\net40\WebActivator.dll</HintPath>
         <Private>True</Private>
