--- a/Web/WebApiApplication/Web.config
+++ b/Web/WebApiApplication/Web.config
@@ -19,9 +19,20 @@
         <handlers>
             <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
             <remove name="OPTIONSVerbHandler" />
-            <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*"
-                 type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+            <remove name="TRACEVerbHandler" />
+            <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+            <!-- New addition -->
+            <add name="OPTIONSVerbHandler" path="*" verb="OPTIONS" modules="ProtocolSupportModule" requireAccess="None" responseBufferLimit="4194304" />
+            <!-- End of new addition -->
         </handlers>
+        <httpProtocol>
+            <customHeaders>
+                <add name="Access-Control-Allow-Origin" value="*" />
+                <add name="Access-Control-Allow-Credentials" value="true"/>
+                <add name="Access-Control-Allow-Headers" value="Content-Type" />
+                <add name="Access-Control-Allow-Methods" value="GET, POST, PUT, DELETE, OPTIONS" />
+            </customHeaders>
+        </httpProtocol>
     </system.webServer>
 
 
