--- a/Web/WebApiApplication/WebApiApplication.csproj
+++ b/Web/WebApiApplication/WebApiApplication.csproj
@@ -54,6 +54,7 @@
         <Compile Include="Global.asax.cs">
             <DependentUpon>Global.asax</DependentUpon>
         </Compile>
+        <Compile Include="Handlers\LogRequestAndResponseHandler.cs" />
         <Compile Include="Models\HelloWorldResponse.cs" />
         <Compile Include="Models\Patients\SearchPatientsItem.cs" />
         <Compile Include="Models\Patients\SearchPatientsRequest.cs" />
@@ -61,11 +62,14 @@
         <Compile Include="Properties\AssemblyInfo.cs" />
         <Compile Include="Services\IHomeControllerService.cs" />
         <Compile Include="Services\Implementation\HomeControllerService.cs" />
+        <Compile Include="Services\Logging\ILoggingService.cs" />
+        <Compile Include="Services\Logging\Implementation\LoggingService.cs" />
         <Compile Include="Services\Patients\Implementation\PatientsControllerService.cs" />
         <Compile Include="Services\Patients\IPatientsControllerService.cs" />
     </ItemGroup>
     <ItemGroup>
         <Content Include="Global.asax" />
+        <Content Include="NLog.config" />
         <Content Include="Web.config" />
         <Content Include="Web.Debug.config">
             <DependentUpon>Web.config</DependentUpon>
@@ -78,12 +82,21 @@
         <None Include="packages.config" />
     </ItemGroup>
     <ItemGroup>
+      <Reference Include="Microsoft.CSharp" />
       <Reference Include="Microsoft.Web.Infrastructure, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35">
         <HintPath>..\packages\Microsoft.Web.Infrastructure.1.0.0.0\lib\net40\Microsoft.Web.Infrastructure.dll</HintPath>
         <Private>True</Private>
       </Reference>
       <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed">
         <HintPath>..\packages\Newtonsoft.Json.12.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+        <Private>True</Private>
+      </Reference>
+      <Reference Include="NLog, Version=4.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c">
+        <HintPath>..\packages\NLog.4.6.4\lib\net45\NLog.dll</HintPath>
+        <Private>True</Private>
+      </Reference>
+      <Reference Include="NLog.Web, Version=4.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c">
+        <HintPath>..\packages\NLog.Web.4.8.3\lib\net35\NLog.Web.dll</HintPath>
         <Private>True</Private>
       </Reference>
       <Reference Include="SimpleInjector, Version=4.6.0.0, Culture=neutral, PublicKeyToken=984cb50dea722e99">
@@ -98,11 +111,19 @@
         <HintPath>..\packages\Swashbuckle.Core.5.6.0\lib\net40\Swashbuckle.Core.dll</HintPath>
         <Private>True</Private>
       </Reference>
+      <Reference Include="System" />
+      <Reference Include="System.Configuration" />
+      <Reference Include="System.Core" />
+      <Reference Include="System.Data" />
+      <Reference Include="System.IO.Compression" />
+      <Reference Include="System.Net.Http" />
       <Reference Include="System.Net.Http.Formatting, Version=5.2.7.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35">
         <HintPath>..\packages\Microsoft.AspNet.WebApi.Client.5.2.7\lib\net45\System.Net.Http.Formatting.dll</HintPath>
         <Private>True</Private>
       </Reference>
       <Reference Include="System.Runtime.Serialization" />
+      <Reference Include="System.ServiceModel" />
+      <Reference Include="System.Transactions" />
       <Reference Include="System.Web" />
       <Reference Include="System.Web.Cors, Version=5.2.7.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35">
         <HintPath>..\packages\Microsoft.AspNet.Cors.5.2.7\lib\net45\System.Web.Cors.dll</HintPath>
