--- a/Web/Common/Common.csproj
+++ b/Web/Common/Common.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Database\DataAccess\Implementation\Context\YourHelthContext.cs" />
     <Compile Include="Database\DataAccess\Implementation\PatientDataAccess.cs" />
     <Compile Include="Database\DataAccess\IPatientDataAccess.cs" />
+    <Compile Include="Database\Dto\ActionTime.cs" />
     <Compile Include="Database\Dto\Conquest.cs" />
     <Compile Include="Database\Dto\Doctor.cs" />
     <Compile Include="Database\Dto\Patient.cs" />
