--- a/Web/WebApiApplication/WebApiApplication.csproj
+++ b/Web/WebApiApplication/WebApiApplication.csproj
@@ -56,7 +56,7 @@
     <Compile Include="Models\Patients\PatientModel.cs" />
     <Compile Include="Models\Patients\SearchPatientsRequest.cs" />
     <Compile Include="Models\Patients\SearchPatientsResponse.cs" />
-    <Compile Include="Models\Prescriptions\AddPrescriptionRequest.cs" />
+    <Compile Include="Models\Prescriptions\AddConquestRequest.cs" />
     <Compile Include="Models\Prescriptions\PrescriptionModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\Conquest\Implementation\ConquestControllerService.cs" />
@@ -68,9 +68,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Global.asax" />
-    <Content Include="NLog.config">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
+    <Content Include="NLog.config" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
