--- a/Web/WebApiApplication/WebApiApplication.csproj
+++ b/Web/WebApiApplication/WebApiApplication.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Models\Accounts\RegisterPatientResponse.cs" />
     <Compile Include="Models\Accounts\RegisterPatientStatus.cs" />
     <Compile Include="Models\Conquests\ConquestsResponse.cs" />
+    <Compile Include="Models\Conquests\QuestModel.cs" />
     <Compile Include="Models\Conquests\QuestsResponse.cs" />
     <Compile Include="Models\Patients\GetPatientResponse.cs" />
     <Compile Include="Models\Patients\PatientModel.cs" />
