добавлено прохождение квестов и конквестов

--- a/Web/Common/Common.csproj
+++ b/Web/Common/Common.csproj
@@ -78,7 +78,11 @@
     <Compile Include="Services\IConquestService.cs" />
     <Compile Include="Services\Implementation\ConquestService.cs" />
     <Compile Include="Services\Implementation\PatientService.cs" />
+    <Compile Include="Services\Implementation\QuestsService.cs" />
+    <Compile Include="Services\Implementation\System.cs" />
     <Compile Include="Services\IPatientService.cs" />
+    <Compile Include="Services\IQuestsService.cs" />
+    <Compile Include="Services\ISystem.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Models\" />
